<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_buoys"
        android:icon="@drawable/ic_waves"
        android:title="@string/nav_buoys" />

    <item
        android:id="@+id/nav_tides"
        android:icon="@drawable/ic_tide"
        android:title="@string/nav_tides" />

    <item
        android:id="@+id/nav_currents"
        android:icon="@drawable/ic_current"
        android:title="@string/nav_currents" />

    <item
        android:id="@+id/nav_logs"
        android:icon="@drawable/ic_article"
        android:title="@string/nav_logs" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />

</menu>
